[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Settings.gd" type="Script" id=1]
[ext_resource path="res://set.tres" type="DynamicFont" id=2]
[ext_resource path="res://box.tres" type="StyleBox" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.784314, 0, 0.784314, 1 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -395.377
margin_top = -199.127
margin_right = -134.377
margin_bottom = -80.1271
rect_scale = Vector2( 0.708872, 0.708872 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jump1" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 323.0
margin_bottom = 119.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/jump1"]
margin_top = 3.0
margin_right = 273.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 1, 1 )
text = "Jump "

[node name="Button" type="Button" parent="Panel/VBoxContainer/jump1"]
margin_left = 277.0
margin_right = 289.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left1" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 123.0
margin_right = 323.0
margin_bottom = 242.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/left1"]
margin_top = 3.0
margin_right = 196.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 1, 1 )
text = "Left "

[node name="Button" type="Button" parent="Panel/VBoxContainer/left1"]
margin_left = 200.0
margin_right = 212.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right1" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 246.0
margin_right = 323.0
margin_bottom = 365.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/right1"]
margin_top = 3.0
margin_right = 262.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 1, 1 )
text = "Right "

[node name="Button" type="Button" parent="Panel/VBoxContainer/right1"]
margin_left = 266.0
margin_right = 278.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shoot1" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 369.0
margin_right = 323.0
margin_bottom = 488.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/shoot1"]
margin_top = 3.0
margin_right = 291.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 1, 1 )
text = "Shoot "

[node name="Button" type="Button" parent="Panel/VBoxContainer/shoot1"]
margin_left = 295.0
margin_right = 307.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attack1" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 492.0
margin_right = 323.0
margin_bottom = 611.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/attack1"]
margin_top = 3.0
margin_right = 307.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 1, 1 )
text = "Attack "

[node name="Button" type="Button" parent="Panel/VBoxContainer/attack1"]
margin_left = 311.0
margin_right = 323.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 98.4222
margin_top = -199.127
margin_right = 421.422
margin_bottom = 411.873
rect_scale = Vector2( 0.708872, 0.708872 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jump2" type="HBoxContainer" parent="Panel/VBoxContainer2"]
margin_right = 323.0
margin_bottom = 119.0

[node name="Label" type="Label" parent="Panel/VBoxContainer2/jump2"]
margin_top = 3.0
margin_right = 273.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Jump "

[node name="Button" type="Button" parent="Panel/VBoxContainer2/jump2"]
margin_left = 277.0
margin_right = 289.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left2" type="HBoxContainer" parent="Panel/VBoxContainer2"]
margin_top = 123.0
margin_right = 323.0
margin_bottom = 242.0

[node name="Label" type="Label" parent="Panel/VBoxContainer2/left2"]
margin_top = 3.0
margin_right = 196.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Left "

[node name="Button" type="Button" parent="Panel/VBoxContainer2/left2"]
margin_left = 200.0
margin_right = 212.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right2" type="HBoxContainer" parent="Panel/VBoxContainer2"]
margin_top = 246.0
margin_right = 323.0
margin_bottom = 365.0

[node name="Label" type="Label" parent="Panel/VBoxContainer2/right2"]
margin_top = 3.0
margin_right = 262.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Right "

[node name="Button" type="Button" parent="Panel/VBoxContainer2/right2"]
margin_left = 266.0
margin_right = 278.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shoot2" type="HBoxContainer" parent="Panel/VBoxContainer2"]
margin_top = 369.0
margin_right = 323.0
margin_bottom = 488.0

[node name="Label" type="Label" parent="Panel/VBoxContainer2/shoot2"]
margin_top = 3.0
margin_right = 291.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Shoot "

[node name="Button" type="Button" parent="Panel/VBoxContainer2/shoot2"]
margin_left = 295.0
margin_right = 307.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attack2" type="HBoxContainer" parent="Panel/VBoxContainer2"]
margin_top = 492.0
margin_right = 323.0
margin_bottom = 611.0

[node name="Label" type="Label" parent="Panel/VBoxContainer2/attack2"]
margin_top = 3.0
margin_right = 307.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Attack "

[node name="Button" type="Button" parent="Panel/VBoxContainer2/attack2"]
margin_left = 311.0
margin_right = 323.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel"]
margin_left = 19.9291
margin_top = 22.1435
margin_right = 419.929
margin_bottom = 155.143
rect_scale = Vector2( 0.517013, 0.517013 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.784314, 0, 0.784314, 1 )
text = "Back"
[connection signal="button_up" from="Panel/VBoxContainer/jump1/Button" to="." method="_on_jump1_button_up"]
[connection signal="button_up" from="Panel/VBoxContainer/left1/Button" to="." method="_on_left1"]
[connection signal="button_up" from="Panel/VBoxContainer/right1/Button" to="." method="_on_right1"]
[connection signal="button_up" from="Panel/VBoxContainer/shoot1/Button" to="." method="_on_shoot1"]
[connection signal="button_up" from="Panel/VBoxContainer/attack1/Button" to="." method="_on_attack1"]
[connection signal="button_up" from="Panel/VBoxContainer2/jump2/Button" to="." method="_on_jump2_button_up"]
[connection signal="button_up" from="Panel/VBoxContainer2/left2/Button" to="." method="_on_left2"]
[connection signal="button_up" from="Panel/VBoxContainer2/right2/Button" to="." method="_on_right2"]
[connection signal="button_up" from="Panel/VBoxContainer2/shoot2/Button" to="." method="_on_shoot2"]
[connection signal="button_up" from="Panel/VBoxContainer2/attack2/Button" to="." method="_on_attack2"]
[connection signal="button_up" from="Panel/Button" to="." method="_on_Button_button_up"]
